@@ -1,8 +1,0 @@
-fileFormatVersion: 2
-guid: 6be6d155fd14f094996aafab28022d95
-folderAsset: yes
-DefaultImporter:
-  externalObjects: {}
-  userData: 
-  assetBundleName: 
-  assetBundleVariant: 
