@@ -1,11 +1,0 @@
-fileFormatVersion: 2
-guid: 46f85d48011b0d545971ba4aa9072908
-MonoImporter:
-  externalObjects: {}
-  serializedVersion: 2
-  defaultReferences: []
-  executionOrder: 0
-  icon: {instanceID: 0}
-  userData: 
-  assetBundleName: 
-  assetBundleVariant: 
