@@ -8,10 +8,8 @@ using TMPro;
 // Inherits from parser so we can access the structures in Parser
 public class GameManager : Parser
 {
-    [SerializeField] private GameObject card_display = null; // UI that displays the cards
-    [SerializeField] private GameObject background = null; // UI that displays the game's background
-    [SerializeField] private TextMeshProUGUI name_text = null; // UI text that displays the current speaking character's name
-    [SerializeField] private TextMeshProUGUI dialogue_text = null; // UI text that displays the current speaking character's dialogue
+    [SerializeField] private SpriteManager sprite_manager = null; // Reference to the SpriteManager script
+    [SerializeField] private UIManager ui = null; // Reference to the UIManager script
      List<command> command_list;
     private void Start()
     {
@@ -29,42 +27,20 @@ public class GameManager : Parser
             switch (c.type)
             {
                 case "scene": 
+                    ui.ChangeBackgroundImage(sprite_manager.GetPath(c.arg));
                     break;
                 case "emotion": 
                     break;
                 case "character":
-                    ChangeCharacterText(c.arg);
+                    ui.ChangeCharacterText(c.arg);
                     break;
                  case "dialogue":
-                    yield return ChangeDialogueText(c.arg);
+                    yield return ui.ChangeDialogueText(c.arg);
                     break;
                  default:
                     break;
             }
         }
-        ResetBoxes();
-    }
-    
-    // Change text in the header (contains the character's name)
-    private void ChangeCharacterText(string new_text)
-    {
-        name_text.text = new_text;
-    }
-    
-    // Change text in the dialogue box
-    private IEnumerator ChangeDialogueText(string new_text)
-    {
-        do
-        {
-            dialogue_text.text = new_text;
-            yield return null;
-        } while (!Input.GetKeyDown(KeyCode.Mouse0));
-    }
-    
-    // Clear text from the header and dialogue box
-    private void ResetBoxes()
-    {
-        ChangeCharacterText("");
-        dialogue_text.text = ""; // Setting directly because otherwise it will only be enabled after a mouse click
+        ui.ResetBoxes();
     }
 }
