@@ -1,5 +1,12 @@
 CHANGELOG
 ---------------
+2020-12-12 12:56 PST
+- Added a UIManager class to handle UI-specific tasks
+- Added a SpriteManager class to handle sprite-finding tasks
+- Modified GameManager to remove UI-related functionality
+- Modified debug image for easier testing (ex. not a simple white square)
+- Removed Character class (not needed)
+---------------
 2020-12-12 12:03 PST
 - Added placeholder image for testing purposes
 - Modified Parser class to better suit the script format
